F213 Fix flex wrap on legend

--- a/app/javascript/styles/application/molecules/_lists.scss
+++ b/app/javascript/styles/application/molecules/_lists.scss
@@ -24,6 +24,7 @@
 
 .list.--information-list {
   display: flex;
+  flex-wrap: wrap;
   position: relative;
   list-style: none;
   margin-left: 0;
@@ -31,6 +32,7 @@
   li {
     padding-right: 16px;
     min-width: 86px;
+    max-width: 86px;
   }
 
   li .item__primary {
